@@ -127,7 +127,7 @@ Style/OptionalBooleanParameter:
 Style/RedundantRegexpEscape:
   Enabled: false
 Gemspec/RequireMFA: # new in 1.23
-  Enabled: true
+  Enabled: false
 Layout/LineEndStringConcatenationIndentation: # new in 1.18
   Enabled: true
 Lint/AmbiguousOperatorPrecedence: # new in 1.21
@@ -143,7 +143,7 @@ Lint/RequireRelativeSelfPath: # new in 1.22
 Lint/UselessRuby2Keywords: # new in 1.23
   Enabled: true
 Naming/BlockForwarding: # new in 1.24
-  Enabled: true
+  Enabled: false
 Security/IoMethods: # new in 1.22
   Enabled: true
 Style/FileRead: # new in 1.24
@@ -153,7 +153,7 @@ Style/FileWrite: # new in 1.24
 Style/InPatternThen: # new in 1.16
   Enabled: true
 Style/MapToHash: # new in 1.24
-  Enabled: true
+  Enabled: false
 Style/MultilineInPatternThen: # new in 1.16
   Enabled: true
 Style/NestedFileDirname: # new in 1.26
@@ -163,10 +163,10 @@ Style/NumberedParameters: # new in 1.22
 Style/NumberedParametersLimit: # new in 1.22
   Enabled: true
 Style/OpenStructUse: # new in 1.23
-  Enabled: true
+  Enabled: false
 Style/QuotedSymbols: # new in 1.16
   Enabled: true
 Style/RedundantSelfAssignmentBranch: # new in 1.19
   Enabled: true
 Style/SelectByRegexp: # new in 1.22
-  Enabled: true
+  Enabled: false
