@@ -34,5 +34,4 @@ Gem::Specification.new do |s|
   s.add_development_dependency('rake')
   s.add_development_dependency('test-unit', '~> 3')
   s.add_development_dependency('thor')
-  s.metadata['rubygems_mfa_required'] = 'true'
 end
