@@ -438,21 +438,21 @@ module ActiveMerchant # :nodoc:
       end
 
       # -- request methods ---------------------------------------------------
-      def build_xml_transaction_request(&)
-        build_xml_request('SendTranRequest', &)
+      def build_xml_transaction_request(&block)
+        build_xml_request('SendTranRequest', &block)
       end
 
-      def build_xml_payment_storage_request(&)
-        build_xml_request('UpdtRecurrProfRequest', &)
+      def build_xml_payment_storage_request(&block)
+        build_xml_request('UpdtRecurrProfRequest', &block)
       end
 
-      def build_xml_payment_update_request(&)
+      def build_xml_payment_update_request(&block)
         merchant_product_type = 5 # credit card
-        build_xml_request('UpdtRecurrProfRequest', merchant_product_type, &)
+        build_xml_request('UpdtRecurrProfRequest', merchant_product_type, &block)
       end
 
-      def build_xml_payment_search_request(&)
-        build_xml_request('FndRecurrProfRequest', &)
+      def build_xml_payment_search_request(&block)
+        build_xml_request('FndRecurrProfRequest', &block)
       end
 
       def build_xml_request(wrapper, merchant_product_type = nil)
