@@ -281,9 +281,9 @@ module ActiveMerchant
         end
       end
 
-      def build_xml_request(&)
+      def build_xml_request(&block)
         builder = Nokogiri::XML::Builder.new
-        builder.__send__('VancoWS', &)
+        builder.__send__('VancoWS', &block)
         builder.to_xml
       end
 
