@@ -92,6 +92,7 @@
 * CommerceHub: Update Production URL [almalee24] #5340
 * CommerceHub: Add Network Token support [almalee24] #5331
 * Worldpay: Update Stored Credentials [almalee24] #5330
+* Update Rubocop 1.26.0 [almalee24] #5325
 
 == Version 1.137.0 (August 2, 2024)
 * Unlock dependency on `rexml` to allow fixing a CVE (#5181).
